# wait-for

./: README.md  pyproject.toml
tests/: test_file.py  test_http.py  test_main.py  test_parse.py  test_process.py  test_socket.py  test_wait_for.py
wait_for/: __init__.py  file.py  http.py  main.py  parse.py  process.py  socket.py
